update bis Dokumentelemente

--- a/anlagen/tabellen/einstellungen_dokumentklassen.tex
+++ b/anlagen/tabellen/einstellungen_dokumentklassen.tex
@@ -4,7 +4,7 @@
         \toprule
         \textbf{Option}                        & \textbf{Beschreibung}                                              \\
         \midrule
-        \texttt{Xpt}                           & Schriftgröße (Standard: 10pt)                                      \\
+        \texttt{...pt}                         & Schriftgröße (Standard: 10pt)                                      \\
         \texttt{a4paper, b5paper, letterpaper} & Papierformat (A4, B5, Letter, usw.)                                \\
         \texttt{onecolumn, twocolumn}          & Einspaltig, zweispaltig (Standard: onecolumn)                      \\
         \texttt{titlepage, notitlepage}        & Eigene Titelseite oder nicht    (Standard: notitlepage)            \\
