--- a/kapitel/dokumentenelemente.tex
+++ b/kapitel/dokumentenelemente.tex
@@ -1,4 +1,7 @@
 \section{Dokumentenelemente}
+
+\textbf{\large \textcolor{red}{Hier geht es nächstes Mal weiter! Davor ist alles fertig geprüft}}
+
 Neben dem Text gibt es noch weitere Elemente, die in einem Dokument vorkommen können. Dazu gehören unter anderem Bilder, Tabellen, Listen und Quellcode. In diesem Kapitel werden die wichtigsten Elemente vorgestellt.
 
 Bei den folgenden Listen ist es möglich weitere Optionen zu setzen. Dazu werden Optionen in eckigen Klammern angegeben.
