--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,8 @@
 \usepackage{color}              % Ermöglicht farbige Darstellung von Text und Elementen
 \usepackage{comment}            % große Textblöcke auskommentieren -> \begin{comment} ... \end{comment}
 \usepackage{siunitx}            % Einheiten -> \SI{wert}{\einheit}
+    \sisetup{output-decimal-marker = {,}} % Komma als Dezimaltrennzeichen   
+    \sisetup{group-separator = {.}} % Punkt als Tausendertrennzeichen
 \usepackage{float}              % Positionierung von Gleitobjekten (Bilder, Tabellen) -> \begin{figure}[H]
 
 % Bilder / PDFs
