--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -23,8 +23,9 @@ Alle Anweisungen davor dienen lediglich der Vorbereitung des Dokuments. Alle Anw
 
 \subsection{Einbinden / Erstellen des Deckblatts}
 In der Regel wird ein Deckblatt benötigt, welches Informationen wie den Titel, den Autor, das Datum und ein Logo enthält. Dieses kann entweder als PDF-Datei eingebunden, falls ein bereits erstelltes Deckblatt verwendet werden soll oder als neue \LaTeX{}-Datei erstellt werden.
-Das einbinden einer PDF-Datei erfolgt mit dem Befehl \textbf{\texttt{\textbackslash includepdf\{Pfad/zur/Datei.pdf\}}}. Für diesen Befehl wird das Paket \textbf{pdfpages} benötigt (siehe auch \ref{sec:einbinden_von_pdf_dateien}).
-Alternativ kann das Deckblatt auch als \LaTeX{}-Datei eingebunden werden, indem der Inhalt des Deckblatts in eine neue Datei geschrieben und mit dem Befehl \textbf{\texttt{\textbackslash input\{Pfad/zur/Datei.tex\}}} eingebunden wird. Hilfreich ist die Funktion \textbf{\texttt{\textbackslash begin\{titlepage\}}} und \textbf{\texttt{\textbackslash end\{titlepage\}}} um zwischen diesen Befehlen das Deckblatt zu erstellen. In dem Ordner \textbf{kapitel} sind zwei Beispieldateien zu finden.
+Das Einbinden einer PDF-Datei erfolgt mit dem Befehl \textbf{\texttt{\textbackslash includepdf\{Pfad/zur/Datei.pdf\}}} (siehe auch: \ref{sec:einbinden_von_pdf_dateien}). Für diesen Befehl wird das Paket \textbf{pdfpages} benötigt.
+
+Alternativ kann das Deckblatt auch als \LaTeX{}-Datei eingebunden werden, indem der Inhalt des Deckblatts in eine neue Datei geschrieben und mit dem Befehl \textbf{\texttt{\textbackslash input\{Pfad/zur/Datei.tex\}}} eingebunden wird (siehe auch: \ref{sec:einbinden_von_latex_dateien}). Hilfreich ist die Funktion \textbf{\texttt{\textbackslash begin\{titlepage\}}} und \textbf{\texttt{\textbackslash end\{titlepage\}}} um zwischen diesen Befehlen das Deckblatt zu erstellen. In dem Ordner \textbf{kapitel} sind zwei Beispieldateien zu finden.
 
 \subsection{Anpassen der Kopf- und Fußzeilen}
 Die Kopf- und Fußzeilen können mit dem Paket \textbf{fancyhdr} besonders elegant angepasst werden. Zunächst wird mit dem Befehl \textbf{\texttt{\textbackslash pagestyle\{fancy\}}} die Verwendung von individuellen Kopf- und Fußzeilen aktiviert. Anschließend werden mit den Befehlen \textbf{\texttt{\textbackslash fancyfoot\{\}}} und \textbf{\texttt{\textbackslash fancyhead\{\}}} die Standardeinstellungen für Fuß- und Kopfzeile gelöscht. Die Befehle \textbf{\texttt{\textbackslash fancyfoot[Position]\{Text\}}} und \textbf{\texttt{\textbackslash fancyhead[Position]\{Text\}}} ermöglichen das Hinzufügen von Text oder Bildern in die Fuß- oder Kopfzeile.
@@ -49,32 +50,42 @@ Manchmal ist es gewünscht auf einer Seite keine Kopf- und/oder Fußzeile zu hab
   \item \textbf{\texttt{\textbackslash thispagestyle\{plain\}}} - Normale Fußzeile ohne Kopfzeile
 \end{itemize}
 
+\newpage
+
 \subsection{Erstellen des Inhaltsverzeichnisses (und weiterer Verzeichnisse)}
 \label{sec:inhaltsverzeichnis}
 Das Inhaltsverzeichnis wird mit dem Befehl \textbf{\texttt{\textbackslash tableofcontents}} erstellt. Die Tiefe des Inhaltsverzeichnis kann mit dem Befehl \textbf{\texttt{\textbackslash setcounter\{tocdepth\}\{X\}}} festgelegt werden. Dabei steht X für die \underbar{maximale Tiefe} des Inhaltsverzeichnisses und kann folgende Werte annehmen:
 
-\begin{itemize}
-  \item \textbf{0} - Nur \texttt{\textbackslash part\{\}} (nur in \texttt{book} oder \texttt{report})
-  \item \textbf{1} - \texttt{\textbackslash part\{\}} und \texttt{\textbackslash chapter\{\}} (nur in \texttt{book} oder \texttt{report})
-  \item \textbf{2} - \texttt{\textbackslash chapter\{\}} und \texttt{\textbackslash section\{\}}
-  \item \textbf{3} - \texttt{\textbackslash section\{\}} und \texttt{\textbackslash subsection\{\}}
-  \item \textbf{4} - \texttt{\textbackslash subsection\{\}} und \texttt{\textbackslash subsubsection\{\}}
-  \item \textbf{5} - \texttt{\textbackslash subsubsection\{\}} und \texttt{\textbackslash paragraph\{\}}
-  \item \textbf{6} - \texttt{\textbackslash paragraph\{\}} und \texttt{\textbackslash subparagraph\{\}}
-\end{itemize}
+\begin{table}[H]
+  \centering
+  \begin{tabular}{cll}
+    \toprule
+    \textbf{Wert (X)} & \textbf{Maximal nummerierte Ebene}                        \\
+    \midrule
+    -1                & Keine Nummerierung                                        \\
+    0                 & Nur \texttt{\textbackslash part\{\}}                      \\
+    1                 & Bis \texttt{\textbackslash chapter\{\}}                   \\
+    2                 & Bis \texttt{\textbackslash section\{\}}                   \\
+    3                 & Bis \texttt{\textbackslash subsection\{\}} (Standardwert) \\
+    4                 & Bis \texttt{\textbackslash subsubsection\{\}}             \\
+    5                 & Bis \texttt{\textbackslash paragraph\{\}}                 \\
+    6                 & Bis \texttt{\textbackslash subparagraph\{\}}              \\
+    \bottomrule
+  \end{tabular}
+  \caption{Nummerierungstiefe mit \texttt{secnumdepth}}
+  \label{tab:secnumdepth}
+\end{table}
 
-Für die Anwendung dieses Befehls ist darauf zu achten, dass der Befehl \textbf{\texttt{\textbackslash setcounter\{tocdepth\}\{X\}}} vor dem Befehl \textbf{\texttt{\textbackslash tableofcontents}} platziert werden muss.
+Für die Anwendung dieses Befehls ist darauf zu achten, dass \textbf{\texttt{\textbackslash setcounter\{tocdepth\}\{X\}}} vor \textbf{\texttt{\textbackslash tableofcontents}} platziert werden muss.
 
-Sollen weitere Inhaltsverzeichnisse für Abbildungen, Tabellen, etc. erstellt werden, so kann dies mit den Befehlen \textbf{\texttt{\textbackslash listoffigures}}, \textbf{\texttt{\textbackslash listoftables}}, etc. erreicht werden.
-
+Sollen weitere Verzeichnisse für Abbildungen, Tabellen, etc. erstellt werden, so kann dies mit den Befehlen \textbf{\texttt{\textbackslash listoffigures}}, \textbf{\texttt{\textbackslash listoftables}}, etc. erreicht werden.
 
 Darüber hinaus sind weitere Einstellungen mit den Paketen \textbf{tocloft}, \textbf{titletoc} und \textbf{minitoc} möglich.
 
 \subsection{Einbinden von Kapiteln}
-Besonders bei langen und umfangreichen Dokumenten ist es sinnvoll, die einzelnen Kapitel in separaten Dateien zu erstellen und diese dann in das Hauptdokument einzubinden. Dies geschieht mit dem Befehl \textbf{\texttt{\textbackslash input\{Pfad/zur/Datei.tex\}}}. Dabei ist darauf zu achten, dass der Pfad relativ zum Hauptdokument angegeben wird.
-Ich persönlich strukturiere meine \LaTeX{}-Dateien in einem eigenen Ordner (kapitel) und binde sie in einer dafür vorgesehenen Datei (uebersicht.tex) ein, welche in der main.tex Datei eingefügt wird. Somit muss die main.tex Datei nach einmaliger Einrichtung nicht mehr verändert werden.
+Bei langen und umfangreichen Dokumenten ist es besonders sinnvoll, die einzelnen Kapitel in separaten Dateien zu erstellen und diese dann in das Hauptdokument einzubinden. Dies geschieht mit dem Befehl \textbf{\texttt{\textbackslash input\{Pfad/zur/Datei.tex\}}} (siehe auch: \ref{sec:einbinden_von_latex_dateien}). Dabei ist darauf zu achten, dass der Pfad relativ zum Hauptdokument angegeben wird.
 
-Mehr zu dem Inkludieren von \LaTeX{}-Dateien ist in Kapitel \ref{sec:einbinden_von_latex_dateien} zu finden.
+Ich persönlich strukturiere meine \LaTeX{}-Dateien in einem eigenen Ordner (kapitel) und binde sie in einer dafür vorgesehenen Datei (uebersicht.tex) ein, welche in der main.tex Datei eingefügt wird. So muss die Datei main.tex nach einmaliger Einrichtung nicht mehr verändert werden.
 
 
 \subsection{Literaturverzeichnis}
@@ -137,6 +148,6 @@ Es stehen folgende Stile zur Auswahl:
 
 Anschließend wird die \textbf{\texttt{.bib}}-Datei mit dem Befehl \textbf{\texttt{\textbackslash bibliography\{Pfad/zur/Datei\}}} eingebunden.
 
-Nun können im Text Zitate eingefügt werden (siehe auch: \nameref{sec:zitieren}).
+Nun können Zitate im Text eingefügt werden (siehe auch: \nameref{sec:zitieren}).
 
 Damit alle Einträge aus der literatur.bib-Datei im Literaturverzeichnis erscheinen, kann der Befehl \textbf{\texttt{\textbackslash nocite\{*\}}} verwendet werden.
